--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task_1",
   "version": "0.1.0",
-  "homepage": "https://jawad606.github.io/JAWAD_Assignment_ROUND2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
