--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task_1",
   "version": "0.1.0",
+  "homepage": "https://jawad606.github.io/JAWAD_Assignment_ROUND2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
